--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ build
 
 # private files
 privkey.txt
+
+# ignore Salt git submodule issue
+src/library/ThreemaGateway/threema-msgapi-sdk-php/source/Salt
