Try to use local submodule
However relative paths do not work by default and one has to edit .git/config manually to make it work.
So this does not yet work properly.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "msgapiphpsdk"]
 	path = src/library/ThreemaGateway/threema-msgapi-sdk-php
-	url = D:/Users/***REMOVED***/GitHub/threema-msgapi-sdk-php
+	url = ../threema-msgapi-sdk-php
