--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,12 @@ build
 # private files
 privkey.txt
 privatekey.txt
+privateKey.txt
 PrivateKey.txt
+.privkey.txt
+.privatekey.txt
+.privateKey.txt
+.PrivateKey.txt
 
 # ignore Salt git submodule issue
 src/library/ThreemaGateway/threema-msgapi-sdk-php/source/Salt
