--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Build files
-build
+build/
 
 # private files
 privkey.txt
@@ -13,3 +13,6 @@ PrivateKey.txt
 
 # ignore Salt git submodule issue
 src/library/ThreemaGateway/threema-msgapi-sdk-php/source/Salt
+
+# drafts
+drafts/
